@@ -172,6 +172,18 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|function
+operator|.
+name|Predicate
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -2288,108 +2300,35 @@ expr_stmt|;
 continue|continue;
 comment|// throw new SolrException(SolrException.ErrorCode.BAD_REQUEST, "no such shard: " + sliceName);
 block|}
+specifier|final
+name|Predicate
+argument_list|<
+name|Replica
+argument_list|>
+name|isShardLeader
+init|=
+operator|new
+name|Predicate
+argument_list|<
+name|Replica
+argument_list|>
+argument_list|()
+block|{
+specifier|private
 name|Replica
 name|shardLeader
 init|=
 literal|null
 decl_stmt|;
-specifier|final
-name|Collection
-argument_list|<
-name|Replica
-argument_list|>
-name|allSliceReplicas
-init|=
-name|slice
-operator|.
-name|getReplicasMap
-argument_list|()
-operator|.
-name|values
-argument_list|()
-decl_stmt|;
-specifier|final
-name|List
-argument_list|<
-name|Replica
-argument_list|>
-name|eligibleSliceReplicas
-init|=
-operator|new
-name|ArrayList
-argument_list|<>
-argument_list|(
-name|allSliceReplicas
-operator|.
-name|size
-argument_list|()
-argument_list|)
-decl_stmt|;
-for|for
-control|(
+annotation|@
+name|Override
+specifier|public
+name|boolean
+name|test
+parameter_list|(
 name|Replica
 name|replica
-range|:
-name|allSliceReplicas
-control|)
-block|{
-if|if
-condition|(
-operator|!
-name|clusterState
-operator|.
-name|liveNodesContain
-argument_list|(
-name|replica
-operator|.
-name|getNodeName
-argument_list|()
-argument_list|)
-operator|||
-name|replica
-operator|.
-name|getState
-argument_list|()
-operator|!=
-name|Replica
-operator|.
-name|State
-operator|.
-name|ACTIVE
-operator|||
-operator|(
-name|onlyNrtReplicas
-operator|&&
-name|replica
-operator|.
-name|getType
-argument_list|()
-operator|==
-name|Replica
-operator|.
-name|Type
-operator|.
-name|PULL
-operator|)
-condition|)
-block|{
-continue|continue;
-block|}
-if|if
-condition|(
-name|onlyNrtReplicas
-operator|&&
-name|replica
-operator|.
-name|getType
-argument_list|()
-operator|==
-name|Replica
-operator|.
-name|Type
-operator|.
-name|TLOG
-condition|)
+parameter_list|)
 block|{
 if|if
 condition|(
@@ -2508,9 +2447,7 @@ name|e
 throw|;
 block|}
 block|}
-if|if
-condition|(
-operator|!
+return|return
 name|replica
 operator|.
 name|getName
@@ -2523,19 +2460,28 @@ operator|.
 name|getName
 argument_list|()
 argument_list|)
-condition|)
-block|{
-continue|continue;
+return|;
 block|}
 block|}
+decl_stmt|;
+specifier|final
+name|List
+argument_list|<
+name|Replica
+argument_list|>
 name|eligibleSliceReplicas
-operator|.
-name|add
+init|=
+name|collectEligibleReplicas
 argument_list|(
-name|replica
+name|slice
+argument_list|,
+name|clusterState
+argument_list|,
+name|onlyNrtReplicas
+argument_list|,
+name|isShardLeader
 argument_list|)
-expr_stmt|;
-block|}
+decl_stmt|;
 name|replicaListTransformer
 operator|.
 name|transform
@@ -2715,6 +2661,155 @@ name|shards_start
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+DECL|method|collectEligibleReplicas
+specifier|private
+specifier|static
+name|List
+argument_list|<
+name|Replica
+argument_list|>
+name|collectEligibleReplicas
+parameter_list|(
+name|Slice
+name|slice
+parameter_list|,
+name|ClusterState
+name|clusterState
+parameter_list|,
+name|boolean
+name|onlyNrtReplicas
+parameter_list|,
+name|Predicate
+argument_list|<
+name|Replica
+argument_list|>
+name|isShardLeader
+parameter_list|)
+block|{
+specifier|final
+name|Collection
+argument_list|<
+name|Replica
+argument_list|>
+name|allSliceReplicas
+init|=
+name|slice
+operator|.
+name|getReplicasMap
+argument_list|()
+operator|.
+name|values
+argument_list|()
+decl_stmt|;
+specifier|final
+name|List
+argument_list|<
+name|Replica
+argument_list|>
+name|eligibleSliceReplicas
+init|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|(
+name|allSliceReplicas
+operator|.
+name|size
+argument_list|()
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|Replica
+name|replica
+range|:
+name|allSliceReplicas
+control|)
+block|{
+if|if
+condition|(
+operator|!
+name|clusterState
+operator|.
+name|liveNodesContain
+argument_list|(
+name|replica
+operator|.
+name|getNodeName
+argument_list|()
+argument_list|)
+operator|||
+name|replica
+operator|.
+name|getState
+argument_list|()
+operator|!=
+name|Replica
+operator|.
+name|State
+operator|.
+name|ACTIVE
+operator|||
+operator|(
+name|onlyNrtReplicas
+operator|&&
+name|replica
+operator|.
+name|getType
+argument_list|()
+operator|==
+name|Replica
+operator|.
+name|Type
+operator|.
+name|PULL
+operator|)
+condition|)
+block|{
+continue|continue;
+block|}
+if|if
+condition|(
+name|onlyNrtReplicas
+operator|&&
+name|replica
+operator|.
+name|getType
+argument_list|()
+operator|==
+name|Replica
+operator|.
+name|Type
+operator|.
+name|TLOG
+condition|)
+block|{
+if|if
+condition|(
+operator|!
+name|isShardLeader
+operator|.
+name|test
+argument_list|(
+name|replica
+argument_list|)
+condition|)
+block|{
+continue|continue;
+block|}
+block|}
+name|eligibleSliceReplicas
+operator|.
+name|add
+argument_list|(
+name|replica
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|eligibleSliceReplicas
+return|;
 block|}
 DECL|method|createSliceShardsStr
 specifier|private
